[tool.poetry]
name = "repl_python3_Create-and-Publish-Web-Apps-and-Data-Dashboards-with-Streaml"
version = "0.1.0"
description = ""
authors = ["Ramino666 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
